# qecc_concat

./: .gitignore  2  CMakeLists.txt  Makefile  README.md  automake.sh  automake.sh-e  autotest.sh  autotest.sh-e  bmark  make_errors.txt  make_log.txt  test.txt
include/: benchmark.h  decode.h  effective.h  linalg.h  logmetrics.h  printfuns.h  qecc.h  rand.h  reps.h  sampling.h  utils.h
src/: .effective.c.swp  LICENSE  benchmark.c  benchmark.h  checks.c  checks.h  constants.c  constants.h  decode.c  decode.h  effective.c  effective.h  hybrid.c  linalg.c  linalg.h  logmetrics.c  logmetrics.h  main.c  memory.c  memory.h  pmets.c  printfuns.c  printfuns.h  qecc.c  qecc.h  qecc_autoindent.c  rand.c  reps.c  reps.h  sampling.c  sampling.h  utils.c  utils.h  zeigh.c
